# image-classification

./: .gitignore  FeatureExtractor.py  LICENSE  Makefile  README.md  pyproject.toml
src/app/: FeatureExtractor.py  KNN.py  __main__.py  resultado.json
src/helper/: arquivos.py  log.py  plot.py
src/log/: log_2024-09-20.txt  log_2024-09-21.txt
