[tool.poetry]
name = "python-repository-template"
version = "0.2.0"
description = "A Python repository template."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.13"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
scikit-image = "^0.24.0"
kaggle = "^1.6.17"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
